<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/more"
        android:icon="@drawable/baseline_more_vert_24"
        android:title=""
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/switchLang"
                android:icon="@drawable/baseline_language"
                android:iconTint="@color/black"
                android:title="@string/switchLang"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/mapsNav"
                android:icon="@drawable/baseline_map"
                android:iconTint="@color/black"
                android:title="@string/maps"
                app:showAsAction="never" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/baseline_logout"
                android:iconTint="@color/black"
                android:title="@string/logout"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>