<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        card_view:cardCornerRadius="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_blue"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageStory"
                    android:layout_width="371dp"
                    android:layout_height="170dp"
                    android:contentDescription="@string/content"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@drawable/loading" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/authorStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/uploadedOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="@+id/authorStory"
                app:layout_constraintStart_toStartOf="@+id/authorStory"
                app:layout_constraintTop_toBottomOf="@+id/authorStory"
                tools:text="@string/dateCreated" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>